# socket3-code

./: .gitignore  README.md  TestGuide.md
Java-intellij/src/: ClientApp.java  ServerApp.java
Java-intellij/src/payload/: BasicBuilder.java  BasicBuilderTest.java  Message.java
Java-intellij/src/socket/: BasicClient.java  BasicServer.java  SessionHandler.java
Java/src/gash/app/: ClientApp.java  ServerApp.java
Java/src/gash/payload/: BasicBuilder.java
Java/src/gash/socket/: BasicClient.java
c++/session/: CMakeLists.txt
c++/session/src/: client.cpp  server.cpp
c++/session/src/payload/: CMakeLists.txt  builder.cpp  builder.hpp  message.hpp
c++/session/src/session/: CMakeLists.txt  session.cpp  session.hpp
c++/session/src/socket/: CMakeLists.txt  server.cpp  server.hpp
python-src/__MACOSX/python-src/basic/: ._README.md
python-src/__MACOSX/python-src/basic/payload/: ._builder.py
python-src/basic/socket/: client.py  server.py
python-src/python-src/basic/payload/: builder.py
python-src/python-src/basic/socket/: server.py
